@@ -3,6 +3,7 @@ HelpMePlay | 1.0.3
 		Added an options panel. This panel is accessible by entering the addon's slash command (/hmp).
 		Automated the adventure map for Shadowlands.
 		Added the rest of the zones for the Battle for Azeroth maps for both factions.
+		Added a dialog option for Aspirant Leda and Aspirant Ikaran, the two NPCs involved in the Suggested Reading quest in Bastion.
 	Changes:
 		The modifier keys will now pause all decisions where the player makes a choice.
 		The player must have at least 300 gold more than the cost of mount training or twice the cost of mount training for it to be automatically learned.
